--- a/csspg.css
+++ b/csspg.css
@@ -59,8 +59,8 @@ footer {
    color: black;
    text-align: center;
 }
-h1.bl {
+h1.big-writing {
   font-size: 20px;
-  color:red;
-  background-color:aqua;
+  color: red;
+  background-color: aqua;
 }
